cmake_minimum_required(VERSION 3.16)

project(hugo-resource-viewer VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Detect if building for Emscripten (WebAssembly)
if(CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
    set(QT_WASM_BUILD TRUE)
else()
    set(QT_WASM_BUILD FALSE)
endif()

# Find Qt packages conditionally
if(QT_WASM_BUILD)
    find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets)
    find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
else()
    find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets Multimedia)
    find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Multimedia)
endif()

include_directories(${CMAKE_SOURCE_DIR}/include)

set(PROJECT_HEADERS
        include/formats/cgffile.h
        include/formats/tilfile.h
        include/formats/rawfile.h
        include/formats/lzpfile.h
        include/formats/palfile.h
        include/formats/cbrfile.h
        include/formats/pbrfile.h
        include/formats/brsfile.h
        include/formats/wavfile.h
        include/hugo/hugo_archive_processor.h
        include/hugo/hugoviewer.h
        include/hugo/hugoresource.h
)
set(PROJECT_SOURCES
        src/formats/cgffile.cpp
        src/formats/tilfile.cpp
        src/formats/rawfile.cpp
        src/formats/lzpfile.cpp
        src/formats/palfile.cpp
        src/formats/cbrfile.cpp
        src/formats/pbrfile.cpp
        src/formats/brsfile.cpp
        src/formats/wavfile.cpp
        src/hugo/hugo_archive_processor.cpp
        src/hugo/hugoviewer.cpp
        src/hugo/hugoresource.cpp
        main.cpp
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(${PROJECT_NAME}
        MANUAL_FINALIZATION
        ${PROJECT_HEADERS}
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(${PROJECT_NAME} SHARED
            ${PROJECT_HEADERS}
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(${PROJECT_NAME}
            ${PROJECT_HEADERS}
            ${PROJECT_SOURCES}
        )
    endif()
endif()

# Link libraries conditionally
if(QT_WASM_BUILD)
    target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
else()
    target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Multimedia)
endif()

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.QHugoResourceViewer)
endif()
set_target_properties(${PROJECT_NAME} PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME}
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(${PROJECT_NAME})
endif()


if(APPLE)
    install(FILES
        "${CMAKE_SOURCE_DIR}/misc/Darwin/scripts/remove_quarantine_after_install.sh"
        DESTINATION .
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
    )
endif()

# CPack configuration
include(InstallRequiredSystemLibraries)

set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Hugo Resource Viewer")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})

set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")

if(NOT DEFINED CPACK_GENERATOR)
    set(CPACK_GENERATOR "ZIP")
endif()

include(CPack)

